# ipod-tools

./: README.md  favs.feather  get_liked_songs.py  main.py  preview_out.py  pyproject.toml  scrape-spotify-library.py  songs_sample.feather  spotify_albums.feather  spotify_playlists.feather  spotify_songs.feather  spotify_songs_with_tidal_sample.feather  to_tidal_link.py
